# ead2-cpds

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: arquitetura.md  product-backlog.md  protocolo-de-testes.md  protocolo.md  sprint-1.md  sprint-2.md  sprint-3.md
src/mensageria/: __init__.py  broker.py  buffer.py  cli.py  client.py  crypto_adapter.py  lamport.py  log_manager.py  message.py  protocol.py
tests/: conftest.py
tests/integration/: test_broadcast.py  test_channels.py  test_crypto_e2e.py  test_multicast.py  test_register.py  test_unicast.py
tests/unit/: test_buffer.py  test_lamport.py  test_log_manager.py  test_message.py  test_protocol.py
